--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.3</version>
+        <version>2.7.18</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.project</groupId>
@@ -50,17 +50,18 @@
             <scope>annotationProcessor</scope>
         </dependency>
 
+        <!-- OpenSearch Java 클라이언트 -->
         <dependency>
             <groupId>org.opensearch.client</groupId>
             <artifactId>opensearch-rest-high-level-client</artifactId>
             <version>2.11.0</version>
         </dependency>
 
+        <!-- JSON 변환을 위한 Jackson 라이브러리-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
-
 
         <!-- JWT -->
         <dependency>
@@ -68,7 +69,15 @@
             <artifactId>jjwt</artifactId>
             <version>0.12.5</version>
         </dependency>
+
+        <!-- 스웨거 -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.15</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
