--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 spring.application.name=SmartPlanAI
 
-jwt.
+# MySQL ?? ??
+spring.datasource.url=jdbc:mysql://121.126.239.236:3306/smartplanai?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=csp
+spring.datasource.password=csp1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA ??
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# UTF-8 ???
+spring.datasource.hikari.connection-init-sql=SET NAMES utf8mb4
