--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
 spring.application.name=SmartPlanAI
 
 # MySQL ?? ??
-spring.datasource.url=jdbc:mysql://121.126.239.236:3306/smartplanai?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.username=csp
-spring.datasource.password=csp1234
+spring.datasource.url=jdbc:mysql://localhost:3306/smartplanai?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=smartuser
+#?? ? ????? ??? ???? ???
+spring.datasource.password=smartpass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA ??
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # UTF-8 ???
 spring.datasource.hikari.connection-init-sql=SET NAMES utf8mb4
