feat: JWT 기반 로그인 및 회원가입 기능 개선
- jjwt 의존성 최신 버전으로 변경 및 멀티모듈 분리 대응
- 사용자 엔티티 username, name 분리 및 관련 로직 수정
- 회원가입/로그인 DTO 및 서비스 로직 개선
- 패스워드 암호화 길이 문제 해결 (password 컬럼 길이 확장)
- JWT 생성/파싱 시 권장 메서드 적용 및 키 검증 강화
- Swagger 관련 접근권한(SecurityConfig) 설정 수정
- 불필요한 Deprecated 코드 제거 및 최신 문법 반영
- 예외 발생 시 명확한 응답 메시지 반환

--- a/pom.xml
+++ b/pom.xml
@@ -70,8 +70,20 @@
         <!-- JWT -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-            <version>0.12.5</version>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.11.5</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>0.11.5</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if you prefer -->
+            <version>0.11.5</version>
+            <scope>runtime</scope>
         </dependency>
 
         <!-- 스웨거 -->
@@ -83,6 +95,7 @@
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
+            <version>8.2.0</version>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
