--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,16 @@ spring.application.name=SmartPlanAI
 # MySQL ?? ??
 spring.datasource.url=jdbc:mysql://localhost:3306/smartplanai?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=smartuser
-#?? ? ????? ??? ???? ???
 spring.datasource.password=smartpass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA ??
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # UTF-8 ???
 spring.datasource.hikari.connection-init-sql=SET NAMES utf8mb4
+
+#jwt(????? base64? ??? ?)
+jwt.secret.key=VGhpc0lzQVJlYWxseUxvbmdKd3RTZWNyZXRLZXkxMjMh
