--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=SmartPlanAI
 
+server.port=9000
 # MySQL ?? ??
 spring.datasource.url=jdbc:mysql://localhost:3306/smartplanai?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=smartuser
